# shacl-validation-benchmarks

./: .gitignore  .gitmodules  README.md  pyrun.sh  run.sh  run_shapes-rs.sh
data/: conformant.ttl  lubm.ttl  non-conformant.ttl
jena/: pom.xml  run.sh
jena/src/main/java/com/weso/jena/: App.java
plot/: plot.py
pyrudof/: benchmark.py  requirements.txt  run.sh
pyshacl/: README.md  benchmark.py  requirements.txt  run.sh
rdf4j/: pom.xml  run.sh
rdf4j/src/main/java/com/weso/rdf4j/: App.java  InputStream.java  RdfUtils.java
results/: jena.csv  pyshacl.csv  rdf4j.csv  shapesrs-no_opt.csv  shapesrs.csv  topquadrant.csv
results/conformant/: jena.csv  pyrudof.csv  pyshacl-full.csv  pyshacl.csv  rdf4j.csv  rudof.csv  shapesrs.csv  topquadrant.csv
results/non-conformant/: jena.csv  pyrudof.csv  pyshacl-full.csv  pyshacl.csv  rdf4j.csv  rudof.csv  shapesrs.csv  topquadrant.csv
shaclex/: run.sh
shapes-rs/: Cargo.toml  run.sh
shapes-rs/src/: main.rs
topquadrant/: pom.xml  run.sh
topquadrant/src/main/java/com/weso/topquadrant/: App.java
